--- a/.github/workflows/03-ci.yml
+++ b/.github/workflows/03-ci.yml
@@ -12,12 +12,12 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.GH_REPO_ACCESS_BY_OWN_APPS }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/DockerCiExample:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/DockerCiExample:latest
