--- a/.github/workflows/03-ci.yml
+++ b/.github/workflows/03-ci.yml
@@ -20,4 +20,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/DockerCiExample:latest
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/dockerciexample:latest
